# ska-sdp-instrumental-calibration

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CHANGELOG.rst  CODEOWNERS  DEVELOPMENT.md  Dockerfile  Makefile  README.md  bandpass_pol_example_config.yml  pyproject.toml  setup.py  sonar-project.properties
.githooks/: pre-commit  pre-push
configs/: calibrator_inst_experimental.yml  calibrator_inst_run.yml  experimental.yml  run.yml  target_inst.yaml  target_ionospheric.yaml
docs/: Makefile  generate_config.py
docs/src/: calibration_strategy.rst  conf.py  index.rst  overview.rst  sdm_mode.rst  stage_config.rst
docs/src/package/: guide.rst
misc/: fetch_testdata  spack_easy_install
notebooks/: demo_basic_calibration.ipynb  demo_basic_calibration_io.ipynb  demo_basic_calibration_loops.ipynb  demo_bpcal_pipeline.ipynb  demo_bppol_pipeline.ipynb  demo_multi_calibration.ipynb  demo_pipeline.ipynb  demo_scheduler_address.ipynb  flux_cal_verification.ipynb  notebook_utils.py  solve_gaintable_refactoring.ipynb
notebooks/refactors/: refactor_export_h5param.ipynb  refactor_load_data.ipynb  refactor_predict_from_components.ipynb  refactor_run_solver.ipynb  refactor_run_solver_actual.ipynb  refactor_solve_gaintable.ipynb
notebooks/spikes/: delay_calibration.ipynb
notebooks/validations/: utils.py  validate_bandpass_stage.ipynb  validate_channel_rm_stage.ipynb  validate_complex_gain.ipynb  validate_complex_gain_cal.ipynb  validate_delay_cal.ipynb  validate_flag_gain.ipynb  validate_ionospheric_cal.ipynb  validate_ionospheric_target.ipynb  validate_predict_stage.ipynb
scripts/: bench_aws.sh  clean-with-gains  inst.sh  oskar_csv_converter.py
scripts/benchmark/: bench_aws.sh  benchmark_variables.sh  inst.sh  inst.yml
scripts/ska_low_sim/: README.md  SKA_Low_AA2_SP5175_spline_data.npz  fields.yaml  generate_gaintable.py  get_data.sh  h5parm_from_oskar_gains.py  requirements.txt  run_sim.py  run_sim.sh  sim.yaml
scripts/ska_low_sim/utils/: h5parm_from_oskar_gains.py  plot_gaintable.py  run_oskar.py
scripts/user/: inst.sh
src/ska_sdp_instrumental_calibration/: __init__.py  deferred_task_manager.py  exceptions.py  instrumental_calibration.py  logger.py  prism.py  scheduler.py  sdm.py  tagger.py  target_calibration.py  vis_model.py
src/ska_sdp_instrumental_calibration/dask_wrappers/: apply.py  beams.py  predict.py  solver.py
src/ska_sdp_instrumental_calibration/data_managers/: baseline_expression.py  beams.py  component.py  dask_wrappers.py  gaintable.py  local_sky_component.py  local_sky_model.py  sdm.py  solution_interval.py  uv_range.py  visibility.py
src/ska_sdp_instrumental_calibration/data_managers/data_export/: __init__.py  export_gaintable.py  export_to_h5parm.py  inst_metadata.py
src/ska_sdp_instrumental_calibration/data_managers/sky_model/: __init__.py  component.py  flux_utils.py  local_sky_component.py  local_sky_model.py  sky_model_reader.py  utils.py
src/ska_sdp_instrumental_calibration/numpy_processors/: dft.py  gaintable.py  lsm.py  rotation_matrix.py
src/ska_sdp_instrumental_calibration/numpy_processors/solvers/: __init__.py  alternative_solvers.py  gain_substitution_solver.py  processing_functions.py  solver.py  solvers_factory.py
src/ska_sdp_instrumental_calibration/plot/: __init__.py  _util.py  plot.py  plot_gaintable.py
src/ska_sdp_instrumental_calibration/processing_tasks/: beams.py  calibration.py  delay.py  gain_flagging.py  gain_smoothing.py  lsm.py  lsm_tmp.py  post_processing.py  predict.py  rotation_measures.py  sliding_window_smooth.py
src/ska_sdp_instrumental_calibration/processing_tasks/calibrate/: ionosphere_solvers.py  solver.py  target_solver.py
src/ska_sdp_instrumental_calibration/processing_tasks/lsm/: __init__.py  lsm.py
src/ska_sdp_instrumental_calibration/processing_tasks/predict_model/: beams.py  predict.py
src/ska_sdp_instrumental_calibration/processing_tasks/solvers/: __init__.py  alternative_solvers.py  gain_substitution_solver.py  ionosphere_solvers.py  processing_functions.py  solver.py  solvers.py  solvers_factory.py
src/ska_sdp_instrumental_calibration/scheduler/: __init__.py  deferred_tasks.py  scheduler.py  task_manager.py
src/ska_sdp_instrumental_calibration/stages/: __init__.py  _common.py  _utils.py  bandpass_calibration.py  bandpass_initialisation.py  channel_rotation_measures.py  data_exports.py  delay_calibration.py  export_visibilities.py  flag_gain.py  ionospheric_delay.py  load_data.py  model_visibilities.py  predict_visibilities.py  smooth_gain_solution.py
src/ska_sdp_instrumental_calibration/stages/configuration_models/: __init__.py  plot.py  run_solver.py  visibility_filter.py
src/ska_sdp_instrumental_calibration/stages/target_calibration/: complex_gain_calibration.py  ionospheric_delay.py  load_data.py  predict_visibilities.py
src/ska_sdp_instrumental_calibration/workflow/: export_metadata.py  pipeline_config.py  plot_gaintable.py  plot_x_dim.py  utils.py  utils_dep.py
src/ska_sdp_instrumental_calibration/workflow/pipelines/: __init__.py  target_calibration.py  (+3 more)
src/ska_sdp_instrumental_calibration/xarray_lazy/: dask_lazy_task.py  xarray_lazy_task.py  xarray_lazy_zarr.py
src/ska_sdp_instrumental_calibration/xarray_processors/: __init__.py  _utils.py  apply.py  baseline_filter.py  beams.py  delay.py  gain_flagging.py  ionosphere_solvers.py  ionosphere_solvers_new.py  predict.py  rotation_measures.py  rotation_measures_new.py  solver.py  uvrange_filter.py
tests/: __init__.py  conftest.py  test_utils.py
tests/e2e/: test_inst_cli.py
tests/e2e/resources/: __init__.py  config.yml  data.py
tests/integration/: test_dask_wrappers.py  test_target_solver.py
tests/integration/ska_sdp_instrumental_calibration/: test_scheduler.py
tests/unit/: .test_calibration.py.swp  test_beam.py  test_beams.py  test_calibration.py  test_dask_wrappers.py  test_delay.py  test_lsm.py  test_predict.py
tests/unit/ska_sdp_instrumental_calibration/: test_instrumental_calibration.py  test_scheduler.py  test_sdm.py  test_tagger.py  test_target_calibration.py
(+148 files in other folders)
