[tool.poetry]
include = ["MANIFEST.skao.int"]
name = "ska-sdp-instrumental-calibration"
version = "0.7.0"
description = "SKA SDP Instrumental Calibration Pipeline"
authors = [
    "Daniel Mitchell <daniel.mitchell@csiro.au>",
    "Stephen Ord <stephen.ord@csiro.au>",
    "Team DHRUVA <team-dhruva@ska>"
    ]
license = "BSD-3-Clause"
packages = [
    { include = "ska_sdp_instrumental_calibration", from = "src" }
]
documentation = "https://developer.skao.int/projects/ska-sdp-instrumental-calibration/en/latest/"
repository = "https://gitlab.com/ska-telescope/sdp/science-pipeline-workflows/ska-sdp-instrumental-calibration.git"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "skao"
url = "https://artefact.skao.int/repository/pypi-internal/simple"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^6.1"
distributed = "^2024.11.2"
xarray = "^2024.7"
# Remove this when xarray is upgraded to 2025*. That should work with zarr 3.*
zarr = "^2.18"
everybeam = "^0.8.0"
numpy = "^1.26.4"
matplotlib = "^3.9.1"
python-casacore = "^3.7.1"
ska-sdp-datamodels = "^1.0.0"
ska-sdp-func = "^1.2"
ska-sdp-func-python = "^1.0.1"
ska-sdp-exec-piper = "^1.1.0"
# This is a temporary fix. See issue: https://github.com/fastapi/typer/discussions/1215
click = "8.1.*"
ska-sdp-dataproduct-metadata = "^1.0.0.post1"

[tool.poetry.extras]
python-casacore = ["python-casacore"]
ska-sdp-func = ["ska-sdp-func"]
ska-sdp-dataproduct-metadata = ["ska-sdp-dataproduct-metadata"]

[tool.poetry.group.dev.dependencies]
isort = "^5.6.4"
flake8 = "^7.1.0"
black = "^24.10.0"
mock = "^5.1.0"
pylint = "^3.3.1"
pylint-junit = "^0.3.2"
pytest = "^8.3.3"
pytest-mock = "^3.12.0"
pytest-pylint = "^0.21.0"
pytest-json-report = "^1.5.0"
pytest-cov = "^6.0.0"
pytest-json = "^0.4.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=8"
myst-parser = ">=4"
sphinx-autodoc-typehints = ">=3"
ska-ser-sphinx-theme = ">=0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ska-sdp-instrumental-calibration = "ska_sdp_instrumental_calibration.instrumental_calibration:ska_sdp_instrumental_calibration"
ska-sdp-instrumental-target-calibration = "ska_sdp_instrumental_calibration.target_calibration:ska_sdp_instrumental_target_calibration"
ska-sdp-instrumental-target-ionospheric = "ska_sdp_instrumental_calibration.target_calibration:ska_sdp_instrumental_target_ionospheric_calibration"
clean-with-gains = {reference = "scripts/clean-with-gains", type = "file"}

[tool.coverage.run]
branch = true
source = [
    "src",
]

[tool.pytest.ini_options]
addopts = "--cov --json-report --json-report-file=htmlcov/report.json --cov-report term --cov-report html --cov-report xml --pylint --pylint-error-types=EF --junitxml=./build/reports/unit-tests.xml"
testpaths = [
    "tests",
]